<resources>
    <string name="app_name">Projet Reva Museum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string-array name="items">
        <item>tympan</item>
        <item>ganesha</item>

    </string-array>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="ErreurTAG">Code NFC non reconnu</string>
    <string name="NFCScanInstructions">Place the device on the NFC tag</string>
    <string name="Or">Or</string>
    <string name="SeePlan">Watch museum Map</string>
    <string name="SeeDescription">Museum Description</string>
    <string name="SeeHistory">NFC Tags History</string>
    <string name="MuseumDescriptionTitle">Museum Description</string>
    <string name="ComingSoon">Coming soon</string>
    <string name="NoNFC">Your device don\'t support NFC</string>
    <string name="checkDirectoryTitle">Non-operational application</string>
    <string name="RepertoireInexistant">App Directory does not exist. It will be created after you click on \"Close App\" button.</string>
    <string name="RepertoireVide">App Directory is empty. No ressources detected.</string>
    <string name="ExplicationFermeture">You must add ressources in the App directory before use this application.</string>
    <string name="Ok">OK</string>
    <string name="closeApp">Close App</string>
    <string name="AucuneDescription">No Description detected.</string>
    <string name="DescriptionTitle">Museum Description</string>
    <string name="planTitle">Museum map</string>
    <string name="MainMenu">Main Menu</string>

    <!-- NFCDialog -->
    <string name="NoNFCDetected">No NFC detected</string>
    <string name="NoNFCDetectedMessage">Your device don\'t have NFC support. You can\'t use your device with this application.</string>
    <string name="CloseApp">Close the app</string>
    <string name="NFCDisabled">NFC is disabled</string>
    <string name="NFCDisabledMessage">NFC is disabled. Please enable NFC in system preferences.</string>
    <string name="GoNFCSettings">Go to NFC settings</string>
    <string name="UnknowTAG">TAG NFC non répertorié</string>
    <string name="historique">Historique</string>
    <string name="clearHistory">Clear history</string>
    <string name="ScrollMedia">Scroll horizontally to see all medias</string>
</resources>
