<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".activities.MenuPrincipal"
    android:background="@color/colorPrimary">

    <!-- Texte et image NFC -->
    <TextView
        android:id="@+id/NFCScanInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:textAlignment="center"
        android:textColor="@color/MainMenuTextColor"
        android:textSize="30sp"
        android:text="@string/NFCScanInstructions" />

    <ImageView
        android:id="@+id/MainMenuImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/nfc_logo"
        app:layout_constraintTop_toBottomOf="@+id/NFCScanInstructions" />

    <!-- Ou -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:background="@color/MainMenuTextColor"
            app:layout_constraintTop_toTopOf="@id/MainMenuOr" />

        <TextView
            android:id="@+id/MainMenuOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Or"
            android:textColor="@color/MainMenuTextColor"
            android:textSize="30sp"
            android:textAlignment="center"
            android:background="@color/colorPrimary"/>

    </RelativeLayout>

    <!-- Boutons du menu -->
    <Button
        android:id="@+id/MainMenuSeePlan"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:text="@string/SeePlan"
        app:layout_constraintBottom_toTopOf="@id/MainMenuSeeDescription"
        style="@style/BoutonBleu"/>
    <Button
        android:id="@+id/MainMenuSeeDescription"
        android:layout_width="0sp"
        android:layout_height="80sp"
        app:layout_constraintWidth_percent="0.5"
        android:text="@string/SeeDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/BoutonBleu"/>
    <Button
        android:id="@+id/MainMenuHistory"
        android:layout_width="0sp"
        android:layout_height="80sp"
        app:layout_constraintWidth_percent="0.5"
        android:text="@string/SeeHistory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/MainMenuSeeDescription"
        style="@style/BoutonBleu"
        />

</android.support.constraint.ConstraintLayout>